# easy-worktree-tui

./: .gitignore  README.md  pyproject.toml  test_select.py
easy_worktree_tui/: main.py
tests/: test_tui.py
