[project]
name = "easy-worktree-tui"
version = "0.0.3"
description = "TUI for easy-worktree"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "easy-worktree>=0.2.2",
]

[project.scripts]
wtt = "easy_worktree_tui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easy_worktree_tui"]
